--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -97,3 +97,14 @@
       color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
     }
   }
+  
+  .creditLink {
+    color: light-dark(var(--mantine-color-blue-6), var(--mantine-color-blue-4));
+    text-decoration: none;
+    transition: color 200ms ease, text-decoration 200ms ease;
+  
+    @mixin hover {
+      color: light-dark(var(--mantine-color-blue-8), var(--mantine-color-blue-3));
+      text-decoration: underline;
+    }
+  }
